# floor-predictor-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.actions.yaml  docker-compose.yaml  logrotate.conf.example  pyproject.toml  supervisord.conf
.github/workflows/: build_and_deploy.yml
floor_predictor_api/: __init__.py  __main__.py  __version__.py  fastapi_init.py
floor_predictor_api/api/: routers.py  system.py
floor_predictor_api/api/v1/: routers.py  scenarios.py
floor_predictor_api/core/: auth.py  config.py  logging.py
floor_predictor_api/exceptions/: __init__.py  base.py
floor_predictor_api/exceptions/logic/: __init__.py  common.py
floor_predictor_api/exceptions/services/: __init__.py  external.py
floor_predictor_api/middlewares/: exception_handler.py  logging.py
floor_predictor_api/prometheus/: metrics.py  server.py
floor_predictor_api/schemas/: __init__.py  geometries.py  predict.py  system.py
floor_predictor_api/services/: __init__.py  data_parser.py  floor_predictor.py  urban_api.py
floor_predictor_api/services/impl/: data_parser.py  floor_predictor.py  urban_api.py
floor_predictor_api/utils/: __init__.py  minio.py
tests/: __init__.py
tests/unit/: test_client.py  test_parser.py  test_service.py
